--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,5 +6,5 @@
     }
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["src/**/*", "src/router/modules/.js"]
+  "include": ["src/**/*", "src/router/modules/.js", "src/router/modules/.js"]
 }
