Feature/change token

--- a/.env.agent
+++ b/.env.agent
@@ -1,4 +1,4 @@
 VITE_MODE=development
 VITE_APP_WEB_URL= https://mlg3.wulidev.com
 VITE_APP_VERSION = 1.0.0
-VITE_BBT_ROLE = admin
+VITE_BBT_ROLE = agent
