--- a/.env.agent
+++ b/.env.agent
@@ -1,4 +1,5 @@
 VITE_MODE=development
 VITE_APP_WEB_URL= https://mlg3.wulidev.com
+VITE_OUTPUT_URL= /admin/agent/
 VITE_APP_VERSION = 1.0.0
 VITE_BBT_ROLE = agent
