--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.2.25",
     "vue-recaptcha": "^2.0.3",
     "vue-router": "^4.0.16",
+    "vuedraggable": "^4.1.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "rollup-plugin-visualizer": "^5.8.3",
     "sass": "^1.51.0",
     "tailwindcss": "^3.0.24",
-    "vite": "^2.9.2"
+    "vite": "^2.9.2",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
