--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dayjs": "^1.11.6",
+    "terser": "^5.16.1",
     "vue": "^3.2.25",
     "vue-recaptcha": "^2.0.3",
     "vue-router": "^4.0.16",
