--- a/.env.testAgent
+++ b/.env.testAgent
@@ -1,4 +1,4 @@
-VITE_MODE=production
+VITE_MODE=development
 VITE_APP_WEB_URL= https://mlg3.wulidev.com
 VITE_OUTPUT_URL= /agent/
 VITE_APP_VERSION = 1.0.0
