--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,7 @@
 VITE_MODE=production
 VITE_APP_WEB_URL= https://mlg3.wulidev.com
 VITE_OUTPUT_URL= /admin/
+VITE_OUTPUT_BASE_URL= /admin/
 VITE_APP_VERSION = 1.0.0
 VITE_WEB_TITLE = 國際管理平台
 VITE_BBT_ROLE = admin
