--- a/.env.testAgent
+++ b/.env.testAgent
@@ -1,6 +1,7 @@
 VITE_MODE=development
 VITE_APP_WEB_URL= https://mlg3.wulidev.com
 VITE_OUTPUT_URL= /agent/
+VITE_OUTPUT_BASE_URL= /admin/agent/
 VITE_APP_VERSION = 1.0.0
 VITE_WEB_TITLE = 國際代理商平台
 VITE_BBT_ROLE = agent
