--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "preview": "vite preview",
     "build:agent": "vite build --mode testAgent",
     "build:admin": "vite build --mode development",
-    "build": "concurrently \"npm run build:prod:agent\" \"npm run build:prod:admin\"",
+    "build:prod": "concurrently \"npm run build:prod:agent\" \"npm run build:prod:admin\"",
     "build:prod:agent": "vite build --mode agent",
     "build:prod:admin": "vite build"
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "concurrently": "^7.6.0",
     "dayjs": "^1.11.6",
     "terser": "^5.16.1",
     "vue": "^3.2.25",
@@ -27,6 +26,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
     "autoprefixer": "^10.4.7",
+    "concurrently": "^7.6.0",
     "element-plus": "^2.2.13",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
