--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.6",
     "terser": "^5.16.1",
     "vue": "^3.2.25",
+    "vue-json-csv": "^2.1.0",
     "vue-recaptcha": "^2.0.3",
     "vue-router": "^4.0.16",
     "vuedraggable": "^4.1.0",
@@ -27,7 +28,7 @@
     "@vitejs/plugin-vue": "^2.3.1",
     "autoprefixer": "^10.4.7",
     "concurrently": "^7.6.0",
-    "element-plus": "^2.2.13",
+    "element-plus": "^2.2.30",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
