Modify base url for local development.

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 VITE_MODE=development
-VITE_APP_WEB_URL= https://mlg3.wulidev.com
+VITE_APP_WEB_URL= http://localhost:8080/
 VITE_OUTPUT_URL= /admin/
 VITE_APP_VERSION = 1.0.0
 VITE_WEB_TITLE = 國際管理平台
