--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 VITE_MODE=production
-VITE_APP_WEB_URL= https://adm.aoduo.us
+VITE_APP_WEB_URL= https://asia-east1-admin-api-393605.cloudfunctions.net
 VITE_OUTPUT_URL= /admin/
 VITE_APP_VERSION = 1.0.0
 VITE_WEB_TITLE = 國際管理平台
